@@ -110,5 +110,17 @@ describe 'Rufus::Lua::State (tables)' do
     @s.eval("return t[3]").should.equal('c')
     @s.eval("return t[4]").should.be.nil
   end
+
+  it 'should reply to to_a(false) (pure = false)' do
+
+    @s.eval("return { a = 'A', b = 'B', c = 3 }").to_a(false).should.equal(
+      [["a", "A"], ["b", "B"], ["c", 3.0]])
+    @s.eval("return { 1, 2 }").to_a(false).should.equal(
+      [ 1.0, 2.0 ])
+    @s.eval("return {}").to_a(false).should.equal(
+      [])
+    @s.eval("return { 1, 2, car = 'benz' }").to_a(false).should.equal(
+      [1.0, 2.0, ["car", "benz"]])
+  end
 end
 
